# qrbug

./: .gitignore  README.md  README_FR.md  install-remote.sh  install.sh  launch_dev_server.sh  requirements.txt  setup.cfg  test-load.py  test-load.sh  test.sh
ACTIONS/: check_selectors.py  close.py  close_auto.py  echo.py  edit_action.py  edit_concerned.py  edit_dispatcher.py  edit_failure.py  edit_selector.py  edit_thing.py  edit_user.py  generate_qr.py  get_file.py  list.py  none.py  pending_feedback.py  reload_journals.py  report_feedback.py  report_mail.py  show_journals.py  stats.py
DOC/: README.md  config.md  flow.html
JOURNALS/: db.example.py  default_db.py  incidents.example.py
STATIC/: base_style.css  flow.html  generate_qr.css  messages_fr  qr_config.html  qr_display_config.html  qr_inner_block.html  qr_script.js  qr_stylesheet.css  report_failure.html  selector_editor.html  selector_script_functions.js
STATIC/QR_GENERATION/: generate_qr.css  qr_infos_block.html  qr_parent_links.html
TESTS/: failure.py  test_action.py  test_edit.py  test_failure.py  test_failure_db.conf  test_selector.py  test_server_db.conf  test_thing.py  test_thing_db.conf  test_user.py  test_user_db.conf  user.py
src/qrbug/: __init__.py  action.py  action_helpers.py  authentication.py  concerned.py  config.py  constants.py  dispatcher.py  editable.py  failure.py  get_mail.py  incident.py  incidents.py  init.py  journals.py  logging.py  logging_system.py  main.py  notifications.py  selector.py  server.py  test_framework.py  thing.py  tree.py  user.py
