[metadata]
name = qrbug
description = Report any incident with a QR code !
author = Thierry Excoffier
license = GNU General Public License v2.0
license_file = LICENSE
platforms = unix, linux, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12

[options]
packages =
    qrbug
python_requires = >=3.10
install_requires =
    aiohttp==3.11.18
    qrcode==8.2
package_dir =
    =src
zip_safe = no
